--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/recaptcha": "^1.0.4",
     "core-js": "^3.15.1",
     "emailjs-com": "^3.2.0",
     "nuxt": "^2.15.7"
