--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/recaptcha": "^1.0.4",
+    "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.15.1",
     "emailjs-com": "^3.2.0",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "sal.js": "^0.8.5"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^1.3.0",
