--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/recaptcha": "^1.0.4",
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.15.1",
