--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "core-js": "^3.15.1",
     "emailjs-com": "^3.2.0",
     "nuxt": "^2.15.7",
-    "sal.js": "^0.8.5"
+    "sal.js": "^0.8.5",
+    "vue-gtag": "^1.16.1"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^1.3.0",
